# celebrating-hue-lights

./: .gitignore  README.md  app_setup.py  main.py  pyproject.toml
src/: args.py  hue.py  models.py  score_event_handler.py  score_monitor.py  score_scraper.py
team_colors/: country_colors.json
